--- a/profile/css/profile.css
+++ b/profile/css/profile.css
@@ -16,6 +16,21 @@
   font-weight: 600;
 }
 
-p {
-text-align: center;
+
+
+
+.box {
+  text-align: center;
+  width: 300px;
+  background: cadetblue;
+  padding: 40px;
+  margin: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 10px;
+  border-radius: 5px;
+  color: white;
+
+  box-shadow: 5px 5px black;
 }
+
