--- a/shose/css/shoes.css
+++ b/shose/css/shoes.css
@@ -134,3 +134,46 @@ div,input,textarea {
 .yellow-button{
   background-color: yellow;
 }
+
+.product-container {
+
+  width: 80%;
+  max-width: 1000px;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.product-container div {
+  float: left;
+  width: 25%;
+  text-align: center;
+}
+
+@media screen and (max-width: 1200px){
+  /*화면의 크기가 1200px 이하일 때 , 테블릿에 적용할 css를 기술*/
+  .main-title {
+    font-size: 30px;
+  }
+
+  .product-container div {
+  width: 50%;
+}
+}
+
+@media screen and (max-width: 768px){
+  /*화면의 크기가 768px 이하일 때 , 모바일에 적용할 css를 기술*/
+  .main-title {
+    font-size: 20px;
+  }
+
+}
+.product-container div {
+  width: 50%;
+}
+
+/*@media screen and (max-width: 576px){
+  /*화면의 크기가 576px 이하일 때 적용할 css를 기술
+  .main-title {
+    font-size: 10px;
+  } */
