--- a/shose/css/shoes.css
+++ b/shose/css/shoes.css
@@ -150,6 +150,20 @@ div,input,textarea {
   text-align: center;
 }
 
+.product-container i {
+  background-color: burlywood;
+  width: 100px;
+  height: 100px;
+  padding-top: 25px;
+  margin-top: 20px;
+  border-radius: 50px;
+  color: white;
+  box-sizing: border-box;
+
+}
+
+
+
 @media screen and (max-width: 1200px){
   /*화면의 크기가 1200px 이하일 때 , 테블릿에 적용할 css를 기술*/
   .main-title {
