--- a/shose/css/shoes.css
+++ b/shose/css/shoes.css
@@ -30,6 +30,7 @@
   color: white;
   margin-top: 100px;
   font-size: 40px;
+  
 
 
 }
@@ -163,6 +164,59 @@ div,input,textarea {
 }
 
 
+.shop-bg {
+  background-color: #eee;
+  padding: 20px;
+ 
+  
+  
+ 
+
+}
+
+.shop-container {
+  display: flex;
+  width: 90%;
+  margin: auto;
+}
+
+.shop-item {
+  width: 33%;
+  padding: 10px;
+ 
+  
+}
+
+.shop-item img {
+  width: 100%;
+  display: block;
+}
+
+
+/* 애니메이션 처리
+1.시작 스타일 정하기*/
+
+
+.overlay {
+width: 100%;
+height: 100%;
+position: absolute;
+background-color: rgba(0, 0, 0, 0.5);
+opacity: 0;
+/*애니메이션 속도 조절*/
+transition: all 1s;
+}
+
+
+/*2.최종 스타일 정함
+3.언제 최종 스타일로 변할 지 정함 (트리거) - hover */
+
+.overlay:hover {
+  opacity: 1;
+}
+
+/*
+4.transition으로 서서히 동작하도록 만들기 */
 
 @media screen and (max-width: 1200px){
   /*화면의 크기가 1200px 이하일 때 , 테블릿에 적용할 css를 기술*/
@@ -180,11 +234,11 @@ div,input,textarea {
   .main-title {
     font-size: 20px;
   }
+  .product-container div {
+    width: 50%;
+  }
+}
 
-}
-.product-container div {
-  width: 50%;
-}
 
 /*@media screen and (max-width: 576px){
   /*화면의 크기가 576px 이하일 때 적용할 css를 기술
