--- a/ex/css/ex.css
+++ b/ex/css/ex.css
@@ -1,7 +1,32 @@
-#navigation-title {
-  color: red;
+.box1 {
+  display: inline-block;
+  padding: 10px;
+  background: #fff000;
+  width: 300px;
+  height: 300px;
+}
+.box2 {
+  display: inline-block;
+  padding: 10px;
+  background: #ff7200;
+  height: 200px;
+  width: 200px;
+}
+.box1 img {
+  width: 50px;
 }
 
-.item {
-  text-decoration: underline;
+
+.box3 {
+  padding: 10px;
+  background: pink;
+}
+
+.box4 {
+  padding: 10px;
+  background: red;
+}
+
+.box3 img {
+  width:  50px;
 }
